<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_filter"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:background="@drawable/rounded_border"
            app:layout_constraintTop_toBottomOf="@id/tv_name_label"
            app:layout_constraintStart_toStartOf="@id/tv_name_label"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_status"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_alive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_alive"
            android:textColor="@color/white"
            android:background="@drawable/bt_bg_selector"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_status_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_dead"
            android:textColor="@color/white"
            android:background="@drawable/bt_bg_selector"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toTopOf="@id/bt_alive"
            app:layout_constraintStart_toEndOf="@id/bt_alive"
            app:layout_constraintEnd_toStartOf="@+id/bt_unknown"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_unknown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_unknown"
            android:textColor="@color/white"
            android:background="@drawable/bt_bg_selector"
            android:layout_marginHorizontal="5dp"
            app:layout_constraintTop_toTopOf="@id/bt_alive"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/text_button_filter"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/bt_unknown"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
