<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="character"
            type="com.alexander.rickmorty.model.viewobject.CharacterViewObject" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:loadImage="@{character.image}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.name}"
            tools:text="Rick"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image"
            app:layout_constraintStart_toEndOf="@id/iv_image"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_specie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_specie"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_name"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_specie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.species}"
            tools:text="Human"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/tv_specie_label"
            app:layout_constraintStart_toEndOf="@id/tv_specie_label"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gender"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_specie_label"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.gender}"
            tools:text="Male"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/tv_gender_label"
            app:layout_constraintStart_toEndOf="@id/tv_gender_label"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_type"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender_label"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{character.type}"
            tools:text="Male"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/tv_type_label"
            app:layout_constraintStart_toEndOf="@id/tv_type_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
